# tscc

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_vs2017.bat  note.txt
bootstrap/: bootstrap.h
src/: AST.c  ASTArray.c  ASTAssignment.c  ASTAttributeAccess.c  ASTBinop.c  ASTClass.c  ASTComment.c  ASTCompound.c  ASTDatatype.c  ASTFloat.c  ASTFor.c  ASTFunctionCall.c  ASTFunctionDefinition.c  ASTIf.c  ASTInteger.c  ASTNull.c  ASTObjectInit.c  ASTReturn.c  ASTString.c  ASTUndefined.c  ASTVariable.c  ASTVariableDefinition.c  ASTWhile.c  CMakeLists.txt  dynamic_list.c  io.c  lex.c  main.c  outputbuffer.c  parse.c  remap.c  scope.c  strutils.c  token.c  visit.c
src/include/: AST.h  ASTArray.h  ASTAssignment.h  ASTAttributeAccess.h  ASTBinop.h  ASTClass.h  ASTComment.h  ASTCompound.h  ASTDatatype.h  ASTFloat.h  ASTFor.h  ASTFunctionCall.h  ASTFunctionDefinition.h  ASTIf.h  ASTInteger.h  ASTNull.h  ASTObjectInit.h  ASTReturn.h  ASTString.h  ASTUndefined.h  ASTVariable.h  ASTVariableDefinition.h  ASTWhile.h  dynamic_list.h  io.h  lex.h  outputbuffer.h  parse.h  remap.h  scope.h  strutils.h  token.h  visit.h
typescript/: addition.ts  arrays.ts  class.ts  condition.ts  main.ts  null.ts  return.ts  statement.ts  while.ts
